Fix bouncing background on mobile v2

--- a/css/index.css
+++ b/css/index.css
@@ -292,6 +292,7 @@ nav {
 @media (max-width: 768px) {
     html, body {
         overscroll-behavior-y: none;
+        -webkit-overflow-scrolling: auto;
     }
     body {
         background-attachment: scroll;
