--- a/css/info.css
+++ b/css/info.css
@@ -273,6 +273,7 @@ a:hover {
 @media (max-width: 768px) {
   html, body {
     overscroll-behavior-y: none;
+    -webkit-overflow-scrolling: auto;
 }
   body {
     background-attachment: scroll; /* Estää "ruutukaappauksen" efektin häiriöt */
