--- a/css/overview.css
+++ b/css/overview.css
@@ -321,6 +321,7 @@ nav {
 @media (max-width: 768px) {
   html, body {
     overscroll-behavior-y: none;
+    -webkit-overflow-scrolling: auto;
 }
   body {
     background-attachment: scroll; /* Estää "ruutukaappauksen" efektin häiriöt */
